--- a/test/data/data/dataAttrs.html
+++ b/test/data/data/dataAttrs.html
@@ -5,6 +5,7 @@
 	<title>IE11 onpageshow strangeness (trac-14894)</title>
 	<script src="../../jquery.js"></script>
 	<script src="../iframeTest.js"></script>
+	//new comment
 	<script>
 		$(function(){
 			startIframeTest( $( "body" ).data().result );
